# rna-seq-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  development_plan.md  docker-compose.yml  fastp.nf  featurecounts.nf  launch.py  main.nf  main.py  nextflow.config  pyproject.toml  requirements.txt  star.nf  summarize.py
agent/: config_manager.py  core.py  executor.py  graph.py  log_parser.py  pipeline.py  process_manager.py  prompt.py  result_analyzer.py  router.py  server.py  state.py  tools.py  ui_manager.py
agent/nodes/: chat_nodes.py  execute_mode_node.py  normal_mode_node.py  plan_mode_node.py
config/: cherrystudio_import.json  genomes.json  nextflow.config
data/: SRR_list.txt  genome.txt
data/config/: genomes.json
mcpserver/: server.py
nextflow/: main.nf  nextflow.config
nextflow/modules/: analysis.nf  de_analysis.nf  download_fastq.nf  download_genome.nf  fastp.nf  featurecounts.nf  genome_prep.nf  publish.nf  star.nf
scripts/: agent.py  agent_server.py  launch.py  mcp_client.py  summarize.py
src/: __init__.py  core.py  decorators.py  graph.py  logging_bootstrap.py  prompts.py  route.py  route_decider.py  state.py  tools.py
src/agents/: __init__.py  fastp_agent.py
src/config/: __init__.py  default_tool_params.py  paths.py  settings.py  tools_config.py
src/nextflow/: build_hisat2_index.nf  build_index.nf  fastp.nf  featurecounts.nf  hisat2.nf  star.nf
src/node/: __init__.py  analysis_node.py  detect_node.py  execute_node.py  fastp_node.py  featurecounts_node.py  hisat2_node.py  modify_node.py  normal_node.py  plan_node.py  prepare_node.py  replan_node.py  (+3 more)
(+16 files in other folders)
