[project]
name = "ngs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "jinja2>=3.1.6",
    "langchain>=0.2.0",
    "langchain-community>=0.3.27",
    "langchain-deepseek>=0.1.4",
    "langchain-google-genai>=2.1.9",
    "langchain-openai>=0.1.0",
    "langgraph>=0.6.5",
    "mcp>=1.13.0",
    "nextflow>=25.4.6",
    "pandas>=2.3.1",
    "psutil>=7.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "sse-starlette>=3.0.2",
    "tabulate>=0.9.0",
]
