[project]
name = "ngs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-deepseek>=0.1.4",
    "langgraph>=0.6.5",
    "pandas>=2.3.1",
    "psutil>=7.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.1",
]

